--- a/elements/gotham-footer/src/gotham-footer.css
+++ b/elements/gotham-footer/src/gotham-footer.css
@@ -5,3 +5,17 @@
 :host([hidden]) {
   display: none;
 }
+
+.container {
+  display: flex;
+  width: auto;
+  background-color: purple;
+  color: white;
+  padding: 1em;
+  flex-direction: column;
+}
+
+.logo {
+  font-size: 1.8em;
+  flex: 1 1 auto;
+}
