updated color and logo

--- a/elements/gotham-footer/src/gotham-footer.css
+++ b/elements/gotham-footer/src/gotham-footer.css
@@ -10,9 +10,10 @@
   display: flex;
   width: auto;
   background-color: purple;
-  color: white;
+  color: burlywood;
   padding: 1em;
   flex-direction: column;
+  align-items: center;
 }
 
 .logo {
